--- a/index.html
+++ b/index.html
@@ -13,16 +13,42 @@
             <div class="logo">
                 <img src="./img/logo.svg" alt="" class="logo-img">
             </div>
-            <p class="main-subtitle"></p>
+            <p class="main-subtitle">Зеленый тариф для дома и бизнеса</p>
             <h1 class="main-title">Солнечная электростанция</h1>
             <h2 class="main-subtitle">с доходом от 1000 $ в месяц</h2>
-            <button href="" class="main-btn-sigup-consult">записаться на консультацию <img src="./img/" alt=""></button>
+            <button class="main-btn-sigup-consult">записаться на консультацию <img src="./img/arrow-btn.svg" alt="" class="btn-signup-consult-image"></button>
             <ul class="soc-links__list-items">
-                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/" alt=""></a></li>
-                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/" alt=""></a></li>
-                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/" alt=""></a></li>
-                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/" alt=""></a></li>
+                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/insta-icon.svg" alt=""></a></li>
+                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/tg-icon.svg" alt=""></a></li>
+                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/wa-icon.svg" alt=""></a></li>
+                <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/fb-icon.svg" alt=""></a></li>
             </ul>
+        </section>
+        <section class="services">
+            <div class="services__content">
+                <div class="services__text-describe">
+                    <h2 class="services__title">УСЛУГИ</h2>
+                    <div class="block-service">
+                        <h3 class="block-service__title">Полный комплект солнечной электростанции</h3>
+                        <p class="block-service__text">74 модели солнечных панелей, 31 модель инверторов, провода с<br> повышенной устойчивостью к атмосферным условиям, качественные<br> соединители, контроллеры зарядов и надежные гелевые аккумуляторы с<br> увеличенным сроком службы.</p>
+                    </div>
+                    <div class="block-service">
+                        <h3 class="block-service__title">Подбор оборудования<br> с максимальной производительностью</h3>
+                        <p class="block-service__text">Подбираем солнечные панели с учетом расположения Вашего дома,<br> количеством прямого и рассеянного излучения, для того, чтобы Ваша<br> электростанция - вырабатывала максимальное количество<br> электроэнергии и окупилась как можно быстрее.</p>
+                    </div>
+                    <div class="block-service">
+                        <h3 class="block-service__title">Монтаж оборудования в соответствии с ГОСТом</h3>
+                        <p class="block-service__text">Монтаж производится в точном соответствии с ГОСТом, с учетом закона<br> о «Зеленом тарифе» и требованиями Облэнерго. При этом, мы<br> учитываем, чтобы солнечная станция имела максимально возможную<br> производительность.</p>
+                    </div>
+                    <div class="block-service">
+                        <h3 class="block-service__title">Помощь в подключении к «Зеленому тарифу»</h3>
+                        <p class="block-service__text">Всю бюрократическую процедуру по подключению Вашей<br> электростанции к «Зеленому тарифу», мы берем на себя, в том числе по<br> увеличению договорной мощности вашего дома. При заказе солнечной<br> электростанции эта услуга абсолютно бесплатна.</p>
+                    </div>
+                </div>
+                <div class="services__image">
+                    <img src="./img/services-image.svg" alt="" class="services-img">
+                </div>
+            </div>
         </section>
     </div>
 </body>
