--- a/index.html
+++ b/index.html
@@ -50,6 +50,46 @@
                 </div>
             </div>
         </section>
+        <section class="rate">
+            <div class="rate__content">
+                <div class="rate__features">
+                    <h2 class="rate__title">ЗЕЛЕНЫЙ ТАРИФ</h2>
+                    <div class="rate__links">
+                        <a href="" class="rate__link">продажа</a>
+                        <a href="" class="rate__link">закрепление</a>
+                        <a href="" class="rate__link">ограничения</a>
+                    </div>
+                    <div class="rate__slider">
+                        <div class="slider__image">
+                            <img src="./img/slider-image.svg" alt="" class="slider-img">
+                        </div>
+                        <div class="slider__text">
+                            <p class="slider__text-describe">Цена, по которой домохозяйства<br> могут продать электроэнергию,<br> более чем в 10 раз превышает<br> цену, по которой они ее<br> покупают для своих нужд — 0,16<br> Евро/кВт (продажа).</p>
+                            <div class="slider__arrow">
+                                <a href="" class="slider__arrow-back"><img src="./img/arrow-back.svg" alt=""></a>
+                                <a href="" class="slider__arrow-forward"><img src="./img/arrow-forward.svg" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="rate__describe">
+                    <p class="rate__describe-text">«Зеленый тариф» — это особые тарифные условия, которые<br> позволяют частным домохозяйствам  не только потреблять,<br> но и продавать выработанное домашними солнечными<br> электростанциями электричество в электросеть общего<br> пользования.</p>
+                    <img src="./img/rate-describe-image.svg" alt="" class="describe-image">
+                </div>
+            </div>
+        </section>
+        <section class="describe">
+
+        </section>
+        <section class="clients">
+            
+        </section>
+        <section class="steps">
+
+        </section>
+        <footer class="footer">
+
+        </footer>
     </div>
 </body>
 <script src="./js/script.js"></script>
