end code section rate

--- a/index.html
+++ b/index.html
@@ -71,6 +71,24 @@
                             </div>
                         </div>
                     </div>
+                    <ul class="rate-features__list-items">
+                        <li class="rate-features__item">
+                            <h3 class="rate-feature__title">Гарантия выкупа</h3>
+                            <p class="rate-feature__describe">Гарантированный выкуп<br> электроэнергии государством -<br> прописано в НКРЕ №447 </p>
+                        </li>
+                        <li class="rate-features__item">
+                            <h3 class="rate-feature__title">Долгосрочно</h3>
+                            <p class="rate-feature__describe">это проект, поддерживаемый<br> международными<br> инвестиционными<br> организациями</p>
+                        </li>
+                        <li class="rate-features__item">
+                            <h3 class="rate-feature__title">Вид вложения</h3>
+                            <p class="rate-feature__describe">Альтернатива банковским<br> депозитам, окупаемость - от 16%<br> до 18% годовых</p>
+                        </li>
+                        <li class="rate-features__item">
+                            <h3 class="rate-feature__title">Высокая ставка</h3>
+                            <p class="rate-feature__describe">Самая высокая тарифная ставка в<br> европе - 0,16 евро</p>
+                        </li>
+                    </ul>
                 </div>
                 <div class="rate__describe">
                     <p class="rate__describe-text">«Зеленый тариф» — это особые тарифные условия, которые<br> позволяют частным домохозяйствам  не только потреблять,<br> но и продавать выработанное домашними солнечными<br> электростанциями электричество в электросеть общего<br> пользования.</p>
