new section end code

--- a/index.html
+++ b/index.html
@@ -96,8 +96,12 @@
                 </div>
             </div>
         </section>
-        <section class="describe">
-
+        <section class="blockquote">
+            <div class="blockquote__content">
+                <blockquote class="blockquote-cite">
+                    «Солнечная электростанция<br> — идеальное вложение средств<br> в свою энергонезависимость и<br>пассивный доход»
+                </blockquote>
+            </div>
         </section>
         <section class="clients">
             
