end code section clients

--- a/index.html
+++ b/index.html
@@ -104,10 +104,29 @@
             </div>
         </section>
         <section class="clients">
-            
+            <div class="clients__content">
+                <div class="clinets__image">
+                    <h3 class="clients__title">НАШИ КЛИЕНТЫ</h3>
+                    <img src="./img/clients-section-image.svg" alt="" class="clients-img">
+                    <div class="slider__arrow slider-arrows__clients">
+                        <a href="" class="slider__arrow-back"><img src="./img/arrow-back.svg" alt=""></a>
+                        <a href="" class="slider__arrow-forward"><img src="./img/arrow-forward.svg" alt=""></a>
+                    </div>
+                </div>
+                <div class="clients__describe-text">
+                    <h3 class="clients__describe-text-title">Солнечная электростанция 30 кВт подключенная<br> по Зеленому Тарифу</h3>
+                    <ul class="clients__list-items">
+                        <li class="clients__item">Расположение: Харьковская обл., г. Харьков</li>
+                        <li class="clients__item">Чистый доход за вычетом налогов с мая 2017 г. по май 2019 г. 13 900 $.</li>
+                        <li class="clients__item">Смонтирована: апрель 2017 г.</li>
+                        <li class="clients__item">Срок службы: 25-30 лет</li>
+                    </ul>
+                    <button class="clients__btn-signup-consult">записаться на консультацию <img src="./img/arrow-btn-black.svg" alt="" class="btn-signup-consult__image"></button>
+                </div>
+            </div>
         </section>
         <section class="steps">
-
+            
         </section>
         <footer class="footer">
 
