--- a/index.html
+++ b/index.html
@@ -126,7 +126,41 @@
             </div>
         </section>
         <section class="steps">
-            
+            <div class="steps__content">
+                <div class="steps__text-describe">
+                    <h2 class="steps__title">5 ШАГОВ К СОБСТВЕННОЙ<br> ЭЛЕКТРОСТАНЦИИ</h2>
+                    <ul class="steps__list-items">
+                        <li class="steps__item">
+                            <span class="num-step">01</span>
+                            <h3 class="title__step">Заявка или звонок</h3>
+                            <p class="describe__step">Оставляете заявку на нашем сайте или связываетесь с нами по телефону<br> или в мессенджерах.</p>
+                        </li>
+                        <li class="steps__item">
+                            <span class="num-step">02</span>
+                            <h3 class="title__step">Консультация и замер на объекте</h3>
+                            <p class="describe__step">Мы просчитываем более 10- 15 вариантов солнечной станции на Вашем<br> участке, чтобы предложить Вам один наиболее выгодный.</p>
+                        </li>
+                        <li class="steps__item">
+                            <span class="num-step">03</span>
+                            <h3 class="title__step">Заключение договора</h3>
+                            <p class="describe__step">Заключается договор, благодаря которому, вы будете застрахованы от<br> некачественного оборудования и срыва сроков.</p>
+                        </li>
+                        <li class="steps__item">
+                            <span class="num-step">04</span>
+                            <h3 class="title__step">Монтаж СЭС</h3>
+                            <p class="describe__step">Наши специалисты производят монтаж солнечных батарей, проводки<br> и инверторов, при необходимости изготавливают опоры.</p>
+                        </li>
+                        <li class="steps__item">
+                            <span class="num-step">05</span>
+                            <h3 class="title__step">Получение дохода от государства</h3>
+                            <p class="describe__step">После подключения к «Зеленому тарифу», вы получаете доход за каждый<br> киловатт, выработанный на Вашей солнечной электростанции по<br> зафиксированному тарифу на момент подключения.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="steps__image">
+                    <img src="./img/steps-img.svg" alt="" class="steps-img">
+                </div>
+            </div>
         </section>
         <footer class="footer">
 
