end code footer

--- a/index.html
+++ b/index.html
@@ -163,7 +163,26 @@
             </div>
         </section>
         <footer class="footer">
-
+            <div class="footer__content">
+                <div class="footer__form">
+                    <h2 class="footer__title">ОСТАВИТЬ ЗАЯВКУ</h2>
+                    <form action="" class="footer-form">
+                        <input type="text" placeholder="Имя">
+                        <input type="text" placeholder="Телефон">
+                    </form>
+                    <button class="footer__btn-sign-up">оставить заявку <img src="./img/arrow-btn.svg" alt="" class="footer-btn-sign-up__image"></button>
+                </div>
+                <div class="footer__contacts-info">
+                    <h3 class="footer__title-contacts">КОНТАКТЫ</h3>
+                    <ul class="footer__conctacts-list-items">
+                        <li class="footer__contacts-item">Центральный офис:<br>г. Москва, ул,Гоголя 13, 1й этаж</li>
+                        <li class="footer__contacts-item">Представительство в Киеве:<br>г. Киев, ул. Є. Коновальця, 103 оф. 410</li>
+                        <li class="footer__contacts-item">Представительства в Харькове, Одессе, Ростове, Сочи, Белгороде</li>
+                        <li class="footer__contacts-item">+7 987 654-54-56<br>+38 067 504-32-57</li>
+                        <li class="footer__contacts-item">Ежедневно 08:00 - 20:00</li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
