--- a/index.html
+++ b/index.html
@@ -183,6 +183,16 @@
                     </ul>
                 </div>
             </div>
+            <div class="footer__bottom">
+                <a href="" class="privacy-policy">Политика конфиденциальности</a>
+                <img src="./img/logo.svg" alt="" class="logo-img">
+                <ul class="footer-soc-links__list-items">
+                    <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/insta-icon.svg" alt=""></a></li>
+                    <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/tg-icon.svg" alt=""></a></li>
+                    <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/wa-icon.svg" alt=""></a></li>
+                    <li class="soc-links__item"><a href="" class="soc-links__link"><img src="./img/fb-icon.svg" alt=""></a></li>
+                </ul>
+            </div>
         </footer>
     </div>
 </body>
